# xzardgz

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.yaml  sample_plan.yaml
docs/: README.md
docs/explanation/: architecture.md  downstream_consumer_implementation.md  downstream_consumer_implementation_plan.md
docs/how_to/: configure_providers.md  create_workflows.md  integrate_downstream_service.md
docs/reference/: cli.md  configuration.md  downstream_consumer_api.md  workflow_format.md
docs/tutorials/: quickstart.md
examples/: downstream_consumer.rs
examples/plans/: analyze_repo.yaml  simple_tutorial.yaml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/agent/: context.rs  core.rs  executor.rs  message.rs  mod.rs  state.rs
src/commands/: auth.rs  chat.rs  generate.rs  mod.rs  run.rs
src/docgen/: diataxis.rs  generator.rs  mod.rs  templates.rs  writer.rs
src/docgen/templates/: explanation.hbs  how_to.hbs  reference.hbs  tutorial.hbs
src/providers/: base.rs  copilot.rs  copilot_auth.rs  factory.rs  mod.rs  ollama.rs  types.rs
src/repository/: git.rs  mod.rs  scanner.rs
src/tools/: executor.rs  file_ops.rs  git_ops.rs  mod.rs  registry.rs
src/workflow/: executor.rs  mod.rs  parser.rs  plan.rs
src/xzepr/consumer/: client.rs  config.rs  kafka.rs  message.rs  mod.rs
tests/: unit.rs
tests/unit/: config_tests.rs  context_tests.rs  docgen_tests.rs  error_tests.rs  parser_tests.rs  provider_base_tests.rs  tool_tests.rs
