[package]
name = "xzardgz"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
futures = "0.3.31"
git2 = "0.20.2"
handlebars = "6.3.2"
ignore = "0.4.25"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native"] }
oauth2 = { version = "4.4", features = ["reqwest"] }
rdkafka = { version = "0.38.0", features = ["ssl", "sasl"] }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
walkdir = "2.5.0"

[dev-dependencies]
mockall = "0.13.1"
temp-env = "0.3.6"
tempfile = "3.23.0"
test-case = "3.3.1"
